# example-servant-partial-client

./: LICENSE  README.md  example-servant-partial-client.cabal
src/: Api.hs  Client.hs  Main.hs  Models.hs  Server.hs
src/Models/: V1.hs  V2.hs  V3.hs
test/: ClientSpec.hs
