name:                example-servant-partial-client
version:             0.1.0.0
synopsis:            Servant with versioned APIs and partial client implementations
description:         Please see README.md
homepage:            https://github.com/githubuser/example-servant-partial-client#readme
license:             BSD3
license-file:        LICENSE
author:              James M.C. Haver II
maintainer:          mchaver@gmail.com
copyright:           2016 James M.C. Haver II
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable example-servant-partial-client
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Api
                       Client
                       Models
                       Server
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aeson
                     , containers
                     , http-client
                     , servant
                     , servant-client
                     , servant-server
                     , stm
                     , text
                     , wai
                     , warp


  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
                     , src
  main-is:             Spec.hs
  other-modules:       Api
                       Client
                       Models
                       Server
  build-depends:       base
                     , aeson
                     , containers
                     , hspec
                     , hspec-discover
                     , http-client
                     , servant
                     , servant-client
                     , servant-server
                     , stm
                     , text
                     , transformers
                     , wai
                     , warp
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/example-servant-partial-client
